# workshops

./: .env.example  .gitignore  LICENSE  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  validate.yml
docs/: index.md  install.md  quickstart.md
docs/stylesheets/: autocon5.css
docs/workshop/: advanced.md  guides.md  index.md  part-1.md  part-2.md  part-3.md  tour.md
notes/: README.md
scripts/: preflight.sh  sonda-trigger.sh
tests/: test_compose_env.py  test_env_loader.py  test_flap_cascade.py  test_main_detect.py  test_reset_infrahub_ensure.py  test_workshops_model.py
workshops/autocon5/: .env.example  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
workshops/autocon5/alertmanager/: alertmanager.yml
workshops/autocon5/automation/: flows.Dockerfile  flows.py  requirements.txt  serve.py  workshop_sdk.py
workshops/autocon5/docs/: README.md  data-pipelines.md  env-lifecycle.md  preflight.md  repo-layout.md  troubleshooting.md  ux-roadmap.md
workshops/autocon5/grafana/: Dockerfile  dashboards.yml  datasources.yml  grafana.ini
workshops/autocon5/grafana/dashboards/: device-health.json  workshop-home.json  workshop-lab-1.json
workshops/autocon5/guides/: README.md  advanced-cascades.md  part-1-telemetry-and-queries.md  part-2-dashboards.md  part-3-alerts-automation-ai.md
workshops/autocon5/infrahub/: README.md  schema.yml
workshops/autocon5/loki/rules/: alerting_rules.yml
workshops/autocon5/prometheus/: prometheus.yml
workshops/autocon5/prometheus/rules/: recording_rules.yml
workshops/autocon5/scripts/: capture-docs-screenshots.py  load-infrahub.sh
workshops/autocon5/sonda/catalog/: all-logs.yaml  cascade-incident.yaml  cisco-snmp-bgp-raw.yaml  cisco-snmp-interface-raw.yaml  srl1-metrics.yaml  srl2-metrics.yaml  srlinux-gnmi-bgp-raw.yaml  srlinux-gnmi-bgp.yaml  srlinux-gnmi-interface-raw.yaml  srlinux-gnmi-interface.yaml  srlinux-ping.yaml
workshops/autocon5/sonda/packs/: cisco-snmp-bgp-raw.yaml  cisco-snmp-interface-raw.yaml  srlinux-gnmi-bgp-raw.yaml  srlinux-gnmi-bgp.yaml  srlinux-gnmi-interface-raw.yaml  srlinux-gnmi-interface.yaml  srlinux-ping.yaml
workshops/autocon5/sonda/scenarios/: all-logs.yaml  cascade-incident.yaml  srl1-metrics.yaml  srl1-raw.yaml  srl2-metrics.yaml  srl2-raw.yaml
workshops/autocon5/sonda/scripts/: scrape-sonda-metrics.sh  sonda-setup.sh
workshops/autocon5/src/autocon5_cli/: __init__.py  evidence.py  load.py  main.py  try_it.py
workshops/autocon5/src/autocon5_workshop/: __init__.py  bootstrap.py  cycle.py  evidence.py  flap.py  flap_cleanup.py  flap_topology.py  incident.py  load.py  page.py  rca.py  reset.py  scenarios.py  silences.py  try_it.py
workshops/autocon5/src/autocon5_workshop/preflight/: __init__.py  layer_a.py  layer_b.py  layer_c.py  runner.py
workshops/autocon5/telegraf/: telegraf-02.conf.toml  telegraf-srl1.conf.toml  telegraf-srl2.conf.toml  telegraf.Dockerfile
workshops/autocon5/vector/: vector.yaml
workshops/autocon5/webhook/: pyproject.toml  webhook.Dockerfile
workshops/autocon5/webhook/app/: api.py  config.py  main.py
