[project]
name = "autocon5-workshop"
version = "0.1.0"
description = "AutoCon5 — Modern Network Observability — `nobs` workshop plugin."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "typer[all]>=0.12,<1",
  "infrahub-sdk[ctl]>=1.0,<2.0",
  "pyyaml>=6.0",
  "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autocon5_workshop"]

[tool.uv]
package = true
