[project]
name = "webhook"
version = "0.1.0"
description = "FastAPI receiver that forwards Alertmanager webhooks into Prefect."
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "fastapi>=0.99.1",
  "uvicorn",
  "prefect>=3.2.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.webhook]
